name:                dbus-ext
version:             0.0.0
synopsis:            Dependently typed interface to dbus
description:         Dependently typed interface to dbus
license:             BSD3
license-file:        LICENSE
author:              Philipp Balzarek
maintainer:          p.balzarek@googlemail.com
copyright:           2013 Philipp Balzarek
category:
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/
--  ghc-options:       -O2
  exposed-modules:   DBus.ExtTypes
                   , DBus.Representable
                   , DBus.TH
--                   , Bindings
                   , DBus.Introspect
                   , DBus.Signature
--                   , DBus.Marshal
  build-depends:     base >= 4 && <5
                   , DBus >= 0.5
                   , bytestring
                   , containers
                   , ghc-prim
                   , singletons
                   , stunclient
                   , template-haskell
                   , text
                   , vector
                   , attoparsec
                   , xml-picklers
                   , xml-types
                   , conduit
                   , xml-conduit
                   , blaze-builder
                   , transformers

test-suite tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5
                   , dbus-ext
                   , xml-hamlet
                   , QuickCheck
                   , text
                   , tasty
                   , tasty-th
                   , tasty-quickcheck
