name:                dbus-ext
version:             0.0.0
synopsis:            Dependently typed interface to dbus
description:         Dependently typed interface to dbus
license:             BSD3
license-file:        LICENSE
author:              Philipp Balzarek
maintainer:          p.balzarek@googlemail.com
copyright:           2013 Philipp Balzarek
category:
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/
--  ghc-options:       -O2
  exposed-modules:   DBus.Types
                   , DBus.Representable
                   , DBus.TH
--                   , Bindings
                   , DBus.Introspect
                   , DBus.Signature
                   , DBus.Object
                   , DBus.Mainloop
                   , DBus
--                   , DBus.Marshal
  build-depends:     base >= 4 && <5
--                   , DBus >= 0.5
                   , attoparsec
                   , blaze-builder
                   , bytestring
                   , conduit
                   , containers
                   , singletons
                   , stm
                   , stunclient
                   , template-haskell
                   , text
                   , transformers
                   , vector
                   , xml-conduit
                   , xml-picklers
                   , xml-types
                   , binary >= 0.7
                   , mtl
                   , data-binary-ieee754

test-suite tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5
                   , dbus-ext
                   , xml-hamlet
                   , QuickCheck
                   , text
                   , tasty
                   , tasty-th
                   , tasty-quickcheck
