name:                dbus-magic
version:             0.0.0
synopsis:            extended magic for dbus
description:         extended magic for dbus
license:             BSD3
license-file:        LICENSE
author:              Philipp Balzarek
maintainer:          p.balzarek@googlemail.com
copyright:           2013 Philipp Balzarek
category:            
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   
  build-depends:     base >= 4 && <5

executable dbus-magic
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5
