name:                dbus-magic
version:             0.0.0
synopsis:            extended magic for dbus
description:         extended magic for dbus
license:             BSD3
license-file:        LICENSE
author:              Philipp Balzarek
maintainer:          p.balzarek@googlemail.com
copyright:           2013 Philipp Balzarek
category:
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/
--  ghc-options:       -O2
  exposed-modules:   DBus.ExtTypes
                   , DBus.Representable
                   , DBus.TH
                   , DBus.Marshal
  build-depends:     base >= 4 && <5
                   , dbus
                   , bytestring
                   , containers
                   , ghc-prim
                   , singletons
                   , stunclient
                   , template-haskell
                   , text
                   , vector
